Replace testimonials section with real clients section: Add 7 major companies as clients

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li><a href="#services">الخدمات</a></li>
                     <li><a href="#stats">الإحصائيات</a></li>
                     <li><a href="#work-method">أسلوب العمل</a></li>
-                    <li><a href="#testimonials">الشهادات</a></li>
+                    <li><a href="#clients">عملاؤنا</a></li>
                     <li><a href="#contact">اتصل بنا</a></li>
                 </ul>
             </div>
@@ -191,34 +191,46 @@
             </div>
         </section>
 
-        <!-- Testimonials Section -->
-        <section id="testimonials" class="testimonials">
+        <!-- Clients Section -->
+        <section id="clients" class="clients">
             <div class="container">
-                <h2 class="section-title">ماذا يقول عملاؤنا</h2>
-                <div class="testimonials-grid">
-                    <div class="testimonial-card">
-                        <div class="testimonial-rating">⭐⭐⭐⭐⭐</div>
-                        <p class="testimonial-text">"خدمة ممتازة وجودة عالية في توريد المياه. فريق محترف ومتجاوب مع جميع الطلبات."</p>
-                        <div class="testimonial-author">
-                            <strong>أحمد محمد</strong>
-                            <span>عميل</span>
-                        </div>
+                <h2 class="section-title">عملاؤنا</h2>
+                <p class="clients-intro">نفتخر بخدمة مجموعة متميزة من الشركات الرائدة في المملكة العربية السعودية</p>
+                <div class="clients-grid">
+                    <div class="client-card">
+                        <div class="client-icon">🏢</div>
+                        <h3 class="client-name">الشركة السعودية للخدمات اللوجستية</h3>
+                        <p class="client-category">خدمات لوجستية</p>
                     </div>
-                    <div class="testimonial-card">
-                        <div class="testimonial-rating">⭐⭐⭐⭐⭐</div>
-                        <p class="testimonial-text">"نوفر المياه لدينا بانتظام وجودة ممتازة. أسطول الشاحنات متنوع ويغطي جميع احتياجاتنا."</p>
-                        <div class="testimonial-author">
-                            <strong>سارة أحمد</strong>
-                            <span>عميلة</span>
-                        </div>
+                    <div class="client-card">
+                        <div class="client-icon">🌴</div>
+                        <h3 class="client-name">شركة النخلات الثلاث</h3>
+                        <p class="client-category">استثمار وتطوير</p>
                     </div>
-                    <div class="testimonial-card">
-                        <div class="testimonial-rating">⭐⭐⭐⭐⭐</div>
-                        <p class="testimonial-text">"خدمة احترافية منذ عام 2010. نثق في جودة المياه وسرعة التوصيل."</p>
-                        <div class="testimonial-author">
-                            <strong>خالد العلي</strong>
-                            <span>عميل</span>
-                        </div>
+                    <div class="client-card">
+                        <div class="client-icon">🏗️</div>
+                        <h3 class="client-name">شركة جذور للتطوير والاستثمار العقاري</h3>
+                        <p class="client-category">تطوير عقاري</p>
+                    </div>
+                    <div class="client-card">
+                        <div class="client-icon">🏭</div>
+                        <h3 class="client-name">شركة الجزيرة للتجارة والتصنيع المحدودة</h3>
+                        <p class="client-category">تجارة وتصنيع</p>
+                    </div>
+                    <div class="client-card">
+                        <div class="client-icon">🏥</div>
+                        <h3 class="client-name">شركة الرعاية الاحترافية لإدارة المرافق</h3>
+                        <p class="client-category">إدارة مرافق</p>
+                    </div>
+                    <div class="client-card">
+                        <div class="client-icon">🏘️</div>
+                        <h3 class="client-name">شركة ركيزة العقارية</h3>
+                        <p class="client-category">عقارات</p>
+                    </div>
+                    <div class="client-card">
+                        <div class="client-icon">👥</div>
+                        <h3 class="client-name">شركة أيوان للموارد البشرية</h3>
+                        <p class="client-category">موارد بشرية</p>
                     </div>
                 </div>
             </div>
