--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav class="nav">
             <div class="container">
                 <a href="#home" class="nav-brand">
-                    <img src="logo.png" alt="اللحيدان لتوريد المياه" class="logo-img" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
+                    <img src="logo.svg" alt="اللحيدان لتوريد المياه" class="logo-img" onerror="this.src='logo.png'; this.onerror=function(){this.style.display='none'; this.nextElementSibling.style.display='block';};">
                     <div class="logo" style="display:none;">💧</div>
                     <div class="brand-text">
                         <h2>اللحيدان لتوريد المياه</h2>
@@ -41,7 +41,7 @@
         <section id="home" class="hero">
             <div class="container">
                 <div class="hero-content">
-                    <img src="logo.png" alt="اللحيدان لتوريد المياه" class="hero-logo-img" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
+                    <img src="logo.svg" alt="اللحيدان لتوريد المياه" class="hero-logo-img" onerror="this.src='logo.png'; this.onerror=function(){this.style.display='none'; this.nextElementSibling.style.display='block';};">
                     <div class="hero-logo" style="display:none;">💧</div>
                     <h1 class="hero-title">اللحيدان لتوريد المياه</h1>
                     <p class="hero-subtitle">ALLHIDAN FOR WATER SUPPLY</p>
@@ -52,7 +52,7 @@
                     </div>
                 </div>
                 <div class="hero-background-image">
-                    <img src="trucks-depot.jpg" alt="محطة الشاحنات" class="hero-bg-img" onerror="this.style.display='none';">
+                    <img src="https://images.unsplash.com/photo-1581092160562-40aa08e78837?w=1920&q=80" alt="محطة الشاحنات" class="hero-bg-img" onerror="this.src='trucks-depot.jpg'; this.onerror=function(){this.style.display='none';};">
                 </div>
             </div>
         </section>
@@ -69,21 +69,21 @@
                     </div>
                     <div class="about-images">
                         <div class="about-image-card">
-                            <img src="water-treatment-plant.jpg" alt="محطة معالجة المياه الخارجية" class="about-img" onerror="this.src='water-treatment-facility.jpg'; this.onerror=null;">
+                            <img src="https://images.unsplash.com/photo-1558618666-fcd25c85cd64?w=800&q=80" alt="محطة معالجة المياه الخارجية" class="about-img" onerror="this.src='water-treatment-plant.jpg'; this.onerror=function(){this.src='water-treatment-facility.jpg';};">
                             <div class="image-overlay">
                                 <h3>محطة معالجة المياه المتقدمة</h3>
                                 <p>تقنية التناضح العكسي (RO)</p>
                             </div>
                         </div>
                         <div class="about-image-card">
-                            <img src="treatment-interior.jpg" alt="داخل محطة المعالجة" class="about-img" onerror="this.src='water-treatment-facility.jpg'; this.onerror=null;">
+                            <img src="https://images.unsplash.com/photo-1581092160607-ee22621dd758?w=800&q=80" alt="داخل محطة المعالجة" class="about-img" onerror="this.src='treatment-interior.jpg'; this.onerror=function(){this.src='water-treatment-facility.jpg';};">
                             <div class="image-overlay">
                                 <h3>معدات حديثة ومتطورة</h3>
                                 <p>أنظمة معالجة متقدمة</p>
                             </div>
                         </div>
                         <div class="about-image-card">
-                            <img src="treatment-equipment.jpg" alt="معدات المعالجة" class="about-img" onerror="this.src='water-treatment-equipment.jpg'; this.onerror=null;">
+                            <img src="https://images.unsplash.com/photo-1558618666-fcd25c85cd64?w=800&q=80" alt="معدات المعالجة" class="about-img" onerror="this.src='treatment-equipment.jpg'; this.onerror=function(){this.src='water-treatment-equipment.jpg';};">
                             <div class="image-overlay">
                                 <h3>خزانات وأنظمة متطورة</h3>
                                 <p>أحدث التقنيات في المعالجة</p>
@@ -145,7 +145,7 @@
                 <h2 class="section-title">خدماتنا</h2>
                 <div class="services-grid">
                     <div class="service-card">
-                        <img src="water-extraction-well.jpg" alt="استخراج المياه" class="service-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
+                        <img src="https://images.unsplash.com/photo-1544377193-33dcf4d68fb5?w=800&q=80" alt="استخراج المياه" class="service-image" onerror="this.src='water-extraction-well.jpg'; this.onerror=function(){this.style.display='none'; this.nextElementSibling.style.display='block';};">
                         <div class="service-icon" style="display:none;">🚰</div>
                         <div class="service-card-content">
                             <h3>استخراج المياه</h3>
@@ -153,7 +153,7 @@
                         </div>
                     </div>
                     <div class="service-card">
-                        <img src="treatment-interior.jpg" alt="معالجة المياه" class="service-image" onerror="this.src='water-treatment-plant.jpg'; this.onerror=null;">
+                        <img src="https://images.unsplash.com/photo-1581092160607-ee22621dd758?w=800&q=80" alt="معالجة المياه" class="service-image" onerror="this.src='treatment-interior.jpg'; this.onerror=function(){this.src='water-treatment-plant.jpg';};">
                         <div class="service-icon" style="display:none;">🔬</div>
                         <div class="service-card-content">
                             <h3>معالجة المياه</h3>
@@ -161,7 +161,7 @@
                         </div>
                     </div>
                     <div class="service-card">
-                        <img src="trucks-yard.jpg" alt="نقل وتوزيع المياه" class="service-image" onerror="this.src='trucks-depot.jpg'; this.onerror=null;">
+                        <img src="https://images.unsplash.com/photo-1581092160562-40aa08e78837?w=800&q=80" alt="نقل وتوزيع المياه" class="service-image" onerror="this.src='trucks-yard.jpg'; this.onerror=function(){this.src='trucks-depot.jpg';};">
                         <div class="service-icon" style="display:none;">🚚</div>
                         <div class="service-card-content">
                             <h3>نقل وتوزيع المياه</h3>
@@ -185,7 +185,7 @@
                     <div class="team-content">
                         <h3 class="team-title">فريق العمل</h3>
                         <p class="team-description">فريق عمل قام على إنجاز المهام في أسرع وقت وبأعلى جودة</p>
-                        <img src="trucks-yard.jpg" alt="فريق العمل والعمليات" class="team-image" onerror="this.src='trucks-depot.jpg'; this.onerror=null;">
+                        <img src="https://images.unsplash.com/photo-1581092160562-40aa08e78837?w=1200&q=80" alt="فريق العمل والعمليات" class="team-image" onerror="this.src='trucks-yard.jpg'; this.onerror=function(){this.src='trucks-depot.jpg';};">
                     </div>
                 </div>
             </div>
@@ -242,7 +242,7 @@
                 <div class="work-steps">
                     <div class="work-step">
                         <div class="step-number">1</div>
-                        <img src="trucks-depot.jpg" alt="تعبئة الشاحنة" class="step-image" onerror="this.src='trucks-yard.jpg'; this.onerror=null;">
+                        <img src="https://images.unsplash.com/photo-1581092160562-40aa08e78837?w=800&q=80" alt="تعبئة الشاحنة" class="step-image" onerror="this.src='trucks-depot.jpg'; this.onerror=function(){this.src='trucks-yard.jpg';};">
                         <div class="step-icon" style="display:none;">🚚</div>
                         <h3>تعبئة الشاحنة</h3>
                         <p>تعبئة الشاحنات من محطاتنا المعتمدة بجودة عالية</p>
@@ -256,7 +256,7 @@
                     </div>
                     <div class="work-step">
                         <div class="step-number">3</div>
-                        <img src="treatment-interior.jpg" alt="معالجة المياه" class="step-image" onerror="this.src='water-treatment-plant.jpg'; this.onerror=null;">
+                        <img src="https://images.unsplash.com/photo-1581092160607-ee22621dd758?w=800&q=80" alt="معالجة المياه" class="step-image" onerror="this.src='treatment-interior.jpg'; this.onerror=function(){this.src='water-treatment-plant.jpg';};">
                         <div class="step-icon" style="display:none;">⚙️</div>
                         <h3>معالجة المياه</h3>
                         <p>معالجة شاملة للمياه باستخدام أحدث التقنيات في محطاتنا المتقدمة</p>
