Enhance design inspired by NWC website: Better colors, improved stats section, service features, and professional styling

--- a/index.html
+++ b/index.html
@@ -114,27 +114,33 @@
         <!-- Statistics Section -->
         <section id="stats" class="stats">
             <div class="container">
-                <h2 class="section-title">إحصائياتنا</h2>
+                <h2 class="section-title">إحصائياتنا وأرقامنا</h2>
+                <p class="stats-intro">نفتخر بإنجازاتنا في خدمة عملائنا</p>
                 <div class="stats-grid">
                     <div class="stat-card">
                         <div class="stat-icon">🚚</div>
                         <div class="stat-number" data-target="50">0</div>
                         <div class="stat-label">شاحنة</div>
+                        <div class="stat-desc">أسطول حديث ومتنوع</div>
+                    </div>
+                    <div class="stat-card">
+                        <div class="stat-icon">📅</div>
+                        <div class="stat-number" data-target="15">0</div>
+                        <div class="stat-label">عام من الخبرة</div>
+                        <div class="stat-desc">خبرة متراكمة منذ 2010</div>
                     </div>
                     <div class="stat-card">
                         <div class="stat-icon">👥</div>
-                        <div class="stat-number" data-target="15">0</div>
-                        <div class="stat-label">عام من الخبرة</div>
-                    </div>
-                    <div class="stat-card">
-                        <div class="stat-icon">💧</div>
                         <div class="stat-number" data-target="1000">0</div>
+                        <div class="stat-plus">+</div>
                         <div class="stat-label">عميل راضٍ</div>
+                        <div class="stat-desc">ثقة عملائنا في خدماتنا</div>
                     </div>
                     <div class="stat-card">
-                        <div class="stat-icon">📍</div>
+                        <div class="stat-icon">🏭</div>
                         <div class="stat-number" data-target="2">0</div>
                         <div class="stat-label">محطة معالجة</div>
+                        <div class="stat-desc">في شرق وشمال الرياض</div>
                     </div>
                 </div>
             </div>
@@ -145,27 +151,57 @@
                 <h2 class="section-title">خدماتنا</h2>
                 <div class="services-grid">
                     <div class="service-card">
-                        <img src="https://images.unsplash.com/photo-1544377193-33dcf4d68fb5?w=800&q=80" alt="استخراج المياه" class="service-image" onerror="this.src='water-extraction-well.jpg'; this.onerror=function(){this.style.display='none'; this.nextElementSibling.style.display='block';};">
+                        <div class="service-image-wrapper">
+                            <img src="https://images.unsplash.com/photo-1544377193-33dcf4d68fb5?w=800&q=80" alt="استخراج المياه" class="service-image" onerror="this.src='water-extraction-well.jpg'; this.onerror=function(){this.style.display='none'; this.nextElementSibling.style.display='block';};">
+                            <div class="service-overlay">
+                                <span class="service-learn-more">اعرف المزيد</span>
+                            </div>
+                        </div>
                         <div class="service-icon" style="display:none;">🚰</div>
                         <div class="service-card-content">
                             <h3>استخراج المياه</h3>
-                            <p>استخراج المياه من المصادر الطبيعية بكفاءة عالية</p>
+                            <p>استخراج المياه من المصادر الطبيعية بكفاءة عالية وجودة ممتازة</p>
+                            <ul class="service-features">
+                                <li>مصادر مياه معتمدة</li>
+                                <li>جودة عالية</li>
+                                <li>كفاءة في الإنتاج</li>
+                            </ul>
                         </div>
                     </div>
                     <div class="service-card">
-                        <img src="https://images.unsplash.com/photo-1581092160607-ee22621dd758?w=800&q=80" alt="معالجة المياه" class="service-image" onerror="this.src='treatment-interior.jpg'; this.onerror=function(){this.src='water-treatment-plant.jpg';};">
+                        <div class="service-image-wrapper">
+                            <img src="https://images.unsplash.com/photo-1581092160607-ee22621dd758?w=800&q=80" alt="معالجة المياه" class="service-image" onerror="this.src='treatment-interior.jpg'; this.onerror=function(){this.src='water-treatment-plant.jpg';};">
+                            <div class="service-overlay">
+                                <span class="service-learn-more">اعرف المزيد</span>
+                            </div>
+                        </div>
                         <div class="service-icon" style="display:none;">🔬</div>
                         <div class="service-card-content">
                             <h3>معالجة المياه</h3>
                             <p>معالجة المياه باستخدام تقنية التناضح العكسي (RO) بأحدث التقنيات</p>
+                            <ul class="service-features">
+                                <li>تقنية RO المتقدمة</li>
+                                <li>فحص الجودة الدوري</li>
+                                <li>محطات حديثة</li>
+                            </ul>
                         </div>
                     </div>
                     <div class="service-card">
-                        <img src="https://images.unsplash.com/photo-1581092160562-40aa08e78837?w=800&q=80" alt="نقل وتوزيع المياه" class="service-image" onerror="this.src='trucks-yard.jpg'; this.onerror=function(){this.src='trucks-depot.jpg';};">
+                        <div class="service-image-wrapper">
+                            <img src="https://images.unsplash.com/photo-1581092160562-40aa08e78837?w=800&q=80" alt="نقل وتوزيع المياه" class="service-image" onerror="this.src='trucks-yard.jpg'; this.onerror=function(){this.src='trucks-depot.jpg';};">
+                            <div class="service-overlay">
+                                <span class="service-learn-more">اعرف المزيد</span>
+                            </div>
+                        </div>
                         <div class="service-icon" style="display:none;">🚚</div>
                         <div class="service-card-content">
                             <h3>نقل وتوزيع المياه</h3>
                             <p>نقل وتوزيع وتوريد المياه بأسطولنا الحديث المتنوع</p>
+                            <ul class="service-features">
+                                <li>أسطول متنوع الأحجام</li>
+                                <li>توصيل سريع</li>
+                                <li>خدمة على مدار الساعة</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -173,12 +209,28 @@
                 <div class="trucks-section">
                     <h3 class="trucks-title">مقاسات الشاحنات المتوفرة</h3>
                     <div class="trucks-grid">
-                        <div class="truck-card">32,000 لتر</div>
-                        <div class="truck-card">18,000 لتر</div>
-                        <div class="truck-card">12,000 لتر</div>
-                        <div class="truck-card">5,000 لتر</div>
+                        <div class="truck-card">
+                            <div class="truck-icon">🚚</div>
+                            <div class="truck-capacity">32,000</div>
+                            <div class="truck-unit">لتر</div>
+                        </div>
+                        <div class="truck-card">
+                            <div class="truck-icon">🚚</div>
+                            <div class="truck-capacity">18,000</div>
+                            <div class="truck-unit">لتر</div>
+                        </div>
+                        <div class="truck-card">
+                            <div class="truck-icon">🚚</div>
+                            <div class="truck-capacity">12,000</div>
+                            <div class="truck-unit">لتر</div>
+                        </div>
+                        <div class="truck-card">
+                            <div class="truck-icon">🚚</div>
+                            <div class="truck-capacity">5,000</div>
+                            <div class="truck-unit">لتر</div>
+                        </div>
                     </div>
-                    <p class="trucks-note">لدينا جميع مقاسات الشاحنات لتلبية احتياجاتك</p>
+                    <p class="trucks-note">لدينا جميع مقاسات الشاحنات لتلبية احتياجاتك بكفاءة عالية</p>
                 </div>
 
                 <div class="team-section">
