Improve design layout inspired by NWC: Better section titles, spacing, and professional structure

--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
 
         <section id="about" class="about">
             <div class="container">
-                <h2 class="section-title">من نحن ؟</h2>
+                <div class="section-title-wrapper">
+                    <h2 class="section-title">من نحن ؟</h2>
+                </div>
                 <div class="about-content">
                     <div class="about-text">
                         <p>بدأت <strong>مؤسسة بدرية يوسف أحمد اللحيدان للمياه</strong> بتوريد وتوزيع المياه في الرياض منذ عام 2010، حيث تم إنشاء أول محطة تحلية للمياه في شرق الرياض عام 2011.</p>
@@ -114,7 +116,9 @@
         <!-- Statistics Section -->
         <section id="stats" class="stats">
             <div class="container">
-                <h2 class="section-title">إحصائياتنا وأرقامنا</h2>
+                <div class="section-title-wrapper">
+                    <h2 class="section-title">إحصائياتنا وأرقامنا</h2>
+                </div>
                 <p class="stats-intro">نفتخر بإنجازاتنا في خدمة عملائنا</p>
                 <div class="stats-grid">
                     <div class="stat-card">
@@ -148,7 +152,9 @@
 
         <section id="services" class="services">
             <div class="container">
-                <h2 class="section-title">خدماتنا</h2>
+                <div class="section-title-wrapper">
+                    <h2 class="section-title">خدماتنا</h2>
+                </div>
                 <div class="services-grid">
                     <div class="service-card">
                         <div class="service-image-wrapper">
@@ -246,7 +252,9 @@
         <!-- Clients Section -->
         <section id="clients" class="clients">
             <div class="container">
-                <h2 class="section-title">عملاؤنا</h2>
+                <div class="section-title-wrapper">
+                    <h2 class="section-title">عملاؤنا</h2>
+                </div>
                 <p class="clients-intro">نفتخر بخدمة مجموعة متميزة من الشركات الرائدة في المملكة العربية السعودية</p>
                 <div class="clients-grid">
                     <div class="client-card">
@@ -290,7 +298,9 @@
 
         <section id="work-method" class="work-method">
             <div class="container">
-                <h2 class="section-title">أسلوب العمل</h2>
+                <div class="section-title-wrapper">
+                    <h2 class="section-title">أسلوب العمل</h2>
+                </div>
                 <div class="work-steps">
                     <div class="work-step">
                         <div class="step-number">1</div>
@@ -319,7 +329,9 @@
 
         <section id="contact" class="contact">
             <div class="container">
-                <h2 class="section-title">اتصل بنا</h2>
+                <div class="section-title-wrapper">
+                    <h2 class="section-title">اتصل بنا</h2>
+                </div>
                 <div class="contact-content">
                     <div class="contact-info">
                         <div class="contact-item">
